[package]
name = "oled-gui"
version = "0.1.0"
authors = ["lyneca <lukemtuthill@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piscreen = { path = "../piscreen" }
rpn-calc = { path = "../rpn-calc" }
rppal = { version = "0.11.3", features = ["hal"] }
ssd1306 = "0.2.6"
embedded-graphics = "^0.4.5"
reqwest = { version = "0.10", features = ["json", "blocking"] }
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"
openssl = { version = "0.10", features = ["vendored"] }
# device_query = { path = "../cargo-thingos/device_query" }
# network-manager = "*"
